# rbstar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml
python/: pyproject.toml
python/src/: lib.rs
rbstar/: __main__.py  metric_computer.py  rb_metrics.py  rb_ranking.py  rb_set.py  util.py
rbstar/tests/: integration_test.py  test_integration.py  test_rb_metrics.py  test_trec_handler.py
rbstar/tests/runs/: 1-9.qrels  301-309.qrels  test-one.trec
rust-lib/: Cargo.toml
rust-lib/python/: Cargo.toml
rust-lib/python/rbpy/: __init__.py
