[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rbstar"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "RBStar: Rank-biased effectiveness metrics for IR evaluation"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["information retrieval", "evaluation metrics", "rank-biased", "IR", "RBP", "RBR", "RBO", "RBA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "tqdm>=4.65.0",
]

[project.scripts]
rbstar = "rbstar.__main__:rbstar_main"

[project.urls]
"Homepage" = "https://github.com/rbstar/rbstar"
"Bug Tracker" = "https://github.com/rbstar/rbstar/issues"
"Documentation" = "https://rbstar.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]
